lohani ke pc mein kuch kaam

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,11 @@ dependencies {
     // For runtime permissions on Marshmallow and above
     compile "io.reactivex:rxjava:1.1.10"
     compile "com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar"
+
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
+// JSON Parsing
+    compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
