--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,18 +21,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.clarifai.clarifai-api2:core:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     // For logging our HTTP outbound + inbound data
-    compile "com.jakewharton.timber:timber:4.3.0"
-    compile "com.squareup.okhttp3:logging-interceptor:3.6.0"
-
+    compile 'com.jakewharton.timber:timber:4.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     // For runtime permissions on Marshmallow and above
-    compile "io.reactivex:rxjava:1.1.10"
-    compile "com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar"
-
+    compile 'io.reactivex:rxjava:1.1.10'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar'
+    compile files('C:/Users/Ankush/AndroidStudioProjects/ThereIsSecurity/libs/activation.jar')
+    compile files('C:/Users/Ankush/AndroidStudioProjects/ThereIsSecurity/libs/additionnal.jar')
+    compile files('C:/Users/Ankush/AndroidStudioProjects/ThereIsSecurity/libs/mail.jar')
 }
