--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 04 15:32:15 IST 2017
-sdk.dir=C\:\\Users\\Swapnil\\AppData\\Local\\Android\\Sdk
+#Sun Mar 05 04:35:56 IST 2017
+sdk.dir=C\:\\Users\\Ankush\\AppData\\Local\\Android\\sdk
