code.fun.do over

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="ThereIsSecurity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
